---
source: tests/golden_tests.rs
input_file: tests/golden_tests/simplify_matches/double_unwrap_maybe.hvm
---
(DoubleUnwrap) = λ%arg0 λ%arg1 (match %arg0 { Some: λ%arg1 (match %arg0.x { Some: λ%arg1 %arg0.x.x; None: λ%arg1 %arg1 } %arg1); None: λ%arg1 %arg1 } %arg1)

(Main) = (DoubleUnwrap (Some None) 5)

(None) = #Maybe λSome #Maybe λNone None

(Some) = λx #Maybe λSome #Maybe λNone #Maybe (Some x)
